Bug 1675801 - Use a less hacky way of hiding scrollbars on date/timepicker.xhtml. r=desktop-theme-reviewers,dao
This doesn't change behavior, but is much nicer, isn't it? :-)

Differential Revision: https://phabricator.services.mozilla.com/D96205

UltraBlame original commit: cb5a65382e6e0357e248ef42c2eab1e1f5660cf8

--- a/toolkit/themes/shared/datetimeinputpickers.css
+++ b/toolkit/themes/shared/datetimeinputpickers.css
@@ -36,6 +36,10 @@
   --disabled-fill-color: ButtonShadow;
 
   --disabled-opacity: 0.2;
+
+  
+
+  scrollbar-width: none;
 }
 
 html {
